--- a/try-10-aug.tex
+++ b/try-10-aug.tex
@@ -56,6 +56,27 @@
 \begin{rSection}{Carrier Objective}
  To work for an organization which provides me the opportunity to improve my skills and knowledge to grow along with the organization objective.
 \end{rSection}
+
+%----------------------------------------------------------------------------------------
+%	Certification SECTION
+%----------------------------------------------------------------------------------------
+
+\begin{rSection}{Certifications}
+
+{\bf Deep Learning Specialization} \hfill {\em July 2018 - Now } 
+\\ Certification Url\hfill { Coursera }
+\\
+{\bf Neural Networks and Deep Learning} \hfill {\em Oct 2017 - Now } 
+\\ Certification Url\hfill { Coursera }
+\\
+{\bf Improving Deep Neural Networks} \hfill {\em Nov 2017 - Now } 
+\\ Certification Url\hfill { Coursera }
+%Minor in Linguistics \smallskip \\
+%Member of Eta Kappa Nu \\
+%Member of Upsilon Pi Epsilon \\
+
+
+\end{rSection}
 %--------------------------------------------------------------------------------
 %    Projects And Seminars
 %-----------------------------------------------------------------------------------------------
@@ -65,7 +86,7 @@
 \\{\bf Project Surveillance, Epidemiology, End Results Program (“SEER”)}\\
 Project SEER attempts to detect the type (Benign, Uncertain, Carcinoma in Situ, Malignant )of breast cancer based on the SEER dataset from the National Institutes of Health (NIH). To classify the patients, we explored several traditional machine learning and deep learning techniques such as Support vector machine, Decision tree, Logistic regression, Naive Bayes, Feedforward, and Recurrent neural networks. We filled in some gaps in the data by preprocessing using imputation and other techniques. We identified 15 key features (out of 138 attributes) from the dataset, such as “CS Lymph Nodes”, “CS tumor age”, “Age at diagnosis”, “Tumor marker” etc. Our final dataset consisted of ~1.6 million breast cancer records. After training our data model, we achieved ~98\% accuracy using a deep learning architecture. Then we tuned the parameters and were able to increase the accuracy to 99.25\%. In summary, some of our algorithm’s predictions were accurate 99.25\% of the time in detecting which of the 4 classes or types of breast cancer were present in the data.
 
-Technologies \& Methodology : 
+\item Technologies \& Methodology : 
 python, Tensor-flow, deep learning and traditional machine learning.\\
 
 
@@ -84,12 +105,12 @@ the UIMA.
 
 To support the needs of the selection criteria, we
 
-● Incorporated medical ontology into the annotation framework to enhance the
+\item Incorporated medical ontology into the annotation framework to enhance the
 recognition and extraction of medical terms - conditions, procedures, encounters etc.
 Ontologies used include the National Library of Medicine's MeSH
 ontology, UMLS ontology, Systematized
 Nomenclature of Medicine -- Clinical Terms (SNOMED CT).
-● Created custom annotators to annotate the
+\item Created custom annotators to annotate the
 ○ value of a glycated hemoglobin test
 ○ identification of a myocardial infarction event
 ○ use of aspirin by a patient to prevent myocardial infarction
@@ -98,9 +119,9 @@ Nomenclature of Medicine -- Clinical Terms (SNOMED CT).
 bowel obstruction
 ○ existence of DM
 ○ the language spoken by the patient
-● Created heuristics that applied combined medical knowledge into rules and are applied
+\item Created heuristics that applied combined medical knowledge into rules and are applied
 to the annotated text to determine whether a selection criterion has been met.
-● Extended Wendy Chapman's NegEx algorithm determining negation from clinical reports
+\item Extended Wendy Chapman's NegEx algorithm determining negation from clinical reports
 to determine negation on multiple negation phrases on one sentence.
 Initial results on test data gave us a macro precision of 87.16\% and a macro recall of 82.79\%
 were very promising. 
@@ -113,9 +134,11 @@ were very promising.
 \begin{rSection}{Technical Strengths}
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-Machine Learning \ & Traditional ML, Deep Learning \\
+Machine Learning \ & Traditional ML, Deep Learning, Natural Language Processing(NlP) \\
 Language & Java, Python, C++, C, SQL, Javascript \\
-Software \& Tools & Agile,AWS, Latex \\
+Tools \& Technologies & MySQL, Html, CSS, SQL, Hadoop, Linux, PL/SQL, Jenkins, Oracle, Git,\\
+& Jira(Admin), AWS, Latex \\
+Framework \ & Ruby on Rails, TensorFlow, Keras, ReactJS \\
 \end{tabular}
 
 \end{rSection}
@@ -127,51 +150,48 @@ Software \& Tools & Agile,AWS, Latex \\
 \begin{rSection}{Work Experience}
 
 \begin{rSubsection}{Infolytx Inc, Dhaka}{April 2019 - Now}{Staff Software Engineer / Machine Learning Engineer }{}
-\item 
-- Working on different Deep Learning based and NLP solution. 
--  Leading AI Team and AI projects to articulate and disseminate AI knowledge as well as domain knowledge to the team members.
-- Structured unstructured clinical content such as EHRs by extracting and inferring medical terms such as findings, tests, procedures, diseases, etc using NLP techniques
-- Implemented Object Detection Algorithm to classify and localize an object in an image with 98\% accuracy.
+\item Working on different Deep Learning based and NLP solution. 
+\item Leading AI Team and AI projects to articulate and disseminate AI knowledge as well as domain knowledge to the team members.
+\item Structured unstructured clinical content such as EHRs by extracting and inferring medical terms such as findings, tests, procedures, diseases, etc using NLP techniques
+\item Implemented Object Detection Algorithm to classify and localize an object in an image with 98\% accuracy.
 \end{rSubsection}
 
 \begin{rSubsection}{Infolytx Inc, Dhaka}{November 2016 - March 2019}{Senior Software Engineer}{}
 \item 
 In addition to the responsibility as a software engineer descrived in the previous role:
 
-- Implemented the cohort identification system for the clinical trial in the N2C2 challenge, a competition of Harvard Medical School.  Got a position in TOP 5 in competition and were invited to the present the work with AMIA in San Francisco, California.
-- Worked on different Deep Learning based and NLP solution. 
-- Detected the type of breast cancer based on the SEER dataset using traditional machine learning and deep learning techniques.
-- Implemented  the application to predict the ambulatory status of residents using Deep Learning Techniques(LSTM, Rule-Based) 
-- analyzing electronic medical records
-- natural language processing in the clinical context (Java)
-- building web services / APIs (Java, Python)
-- building front-end applications with ReactJS
+\item Implemented the cohort identification system for the clinical trial in the N2C2 challenge, a competition of Harvard Medical School.  Got a position in TOP 5 in competition and were invited to the present the work with AMIA in San Francisco, California.
+\item Worked on different Deep Learning based and NLP solution. 
+\item Detected the type of breast cancer based on the SEER dataset using traditional machine learning and deep learning techniques.
+\item Implemented  the application to predict the ambulatory status of residents using Deep Learning Techniques(LSTM, Rule-Based) 
+\item analyzing electronic medical records
+\item natural language processing in the clinical context (Java)
+\item building web services / APIs (Java, Python)
+\item building front-end applications with ReactJS
 
 \end{rSubsection}
 
 \begin{rSubsection}{Infolytx Inc, Dhaka}{September 2015 - October 2016}{Software Engineer}{}
-\item 
-Past project work involved: 
-- worked on different machine learning-based solution. 
-- Algorithm used:  Apriori algorithm, KNN, SVM, and different rule-based techniques 
-- worked with UMLS dictionaries and HL7 standards
-- analyzing electronic medical records
-- analyzing large clinical data sets in MongoDB
-- natural language processing in the clinical context (Java)
-- building web services / APIs (Java)
-- building front-end prototypes with  Ruby on Rails and react
-- working on various Java applications - core project work, utilities, etc.
--completed CSM and worked as a ScrumMaster and Team Lead on some projects.
+\item Past project work involved: 
+\item worked on different machine learning-based solution. 
+\item Algorithm used:  Apriori algorithm, KNN, SVM, and different rule-based techniques 
+\item worked with UMLS dictionaries and HL7 standards
+\item analyzing electronic medical records
+\item analyzing large clinical data sets in MongoDB
+\item natural language processing in the clinical context (Java)
+\item building web services / APIs (Java)
+\item building front-end prototypes with  Ruby on Rails and react
+\item working on various Java applications - core project work, utilities, etc.
+\item completed CSM and worked as a ScrumMaster and Team Lead on some projects.
 \end{rSubsection}
 
 \begin{rSubsection}{Nascenia Limited, Dhaka}{August 2014 - August 2016}{Junior Software Engineer}{}
-\item 
-Worked as a team player to develop a web application with on Ruby on rails
-Developed some projects solely from initial requirement gathering to design, coding, testing,
-Did documentation \& implementation and client handling.
-Worked with the application server, web server, and Jenkins server.
-Handled and provided API services. 
-Took Technical Session on Git, Clean Code, Active Record Query 
+\item Worked as a team player to develop a web application with on Ruby on rails.
+\item Developed some projects solely from initial requirement gathering to design, coding, testing.
+\item Did documentation \& implementation and client handling.
+\item Worked with the application server, web server, and Jenkins server.
+\item Handled and provided API services. 
+\item Took Technical Session on Git, Clean Code, Active Record Query 
 \end{rSubsection}
 
 \end{rSection}
