added certification section

--- a/try-10-aug.tex
+++ b/try-10-aug.tex
@@ -23,6 +23,7 @@
 \documentclass{resume} % Use the custom resume.cls style
 
 \usepackage[left=0.75in,top=0.6in,right=0.75in,bottom=0.6in]{geometry} % Document margins
+\usepackage{hyperref}
 \newcommand{\tab}[1]{\hspace{.2667\textwidth}\rlap{#1}}
 \newcommand{\itab}[1]{\hspace{0em}\rlap{#1}}
 \name{Md Abdul Hasib} % Your name
@@ -64,17 +65,25 @@
 \begin{rSection}{Certifications}
 
 {\bf Deep Learning Specialization} \hfill {\em July 2018 - Now } 
-\\ Certification Url\hfill { Coursera }
+\\ \href{https://www.coursera.org/account/accomplishments/specialization/TLSQP268HYTN}{See credential}\hfill { Coursera }
 \\
 {\bf Neural Networks and Deep Learning} \hfill {\em Oct 2017 - Now } 
-\\ Certification Url\hfill { Coursera }
+\\ \href{https://www.coursera.org/account/accomplishments/verify/ZX6HNLJLTC78}{See credential}\hfill { Coursera }
 \\
 {\bf Improving Deep Neural Networks} \hfill {\em Nov 2017 - Now } 
-\\ Certification Url\hfill { Coursera }
-%Minor in Linguistics \smallskip \\
-%Member of Eta Kappa Nu \\
-%Member of Upsilon Pi Epsilon \\
-
+\\ \href{https://www.coursera.org/account/accomplishments/verify/ED7FGSZ9FQWT}{See credential}\hfill { Coursera }
+\\
+{\bf Structuring Machine Learning Projects} \hfill {\em Nov 2017 - Now } 
+\\ \href{https://www.coursera.org/account/accomplishments/verify/24FF824Y2JN2}{See credential}\hfill { Coursera }
+\\
+{\bf Convolutional Neural Networks} \hfill {\em Feb 2018 - Now } 
+\\ \href{https://www.coursera.org/account/accomplishments/verify/SQVKAE5M6UT5}{See credential}\hfill { Coursera }
+\\
+{\bf Sequence Model} \hfill {\em July 2018 - Now } 
+\\ \href{https://www.coursera.org/account/accomplishments/verify/3GKGQZN97W83}{See credential}\hfill { Coursera }
+\\
+{\bf Certified ScrumMaster® (CSM®)} \hfill {\em July 2016 - Now } 
+\\ \href{http://bcert.me/sufosajdm}{See credential}\hfill { Scrum Alliance }
 
 \end{rSection}
 %--------------------------------------------------------------------------------
