--- a/try-10-aug.tex
+++ b/try-10-aug.tex
@@ -32,6 +32,9 @@
 \address{+880-1917187787 \\ abdulhasibsazzad@gmail.com} % Your phone number and email
 
 \begin{document}
+\begin{rSection}{Carrier Objective}
+ To work for an organization which provides me the opportunity to improve my skills and knowledge to grow along with the organization objective.
+\end{rSection}
 
 %----------------------------------------------------------------------------------------
 %	EDUCATION SECTION
@@ -54,9 +57,7 @@
 
 \end{rSection}
 
-\begin{rSection}{Carrier Objective}
- To work for an organization which provides me the opportunity to improve my skills and knowledge to grow along with the organization objective.
-\end{rSection}
+
 
 %----------------------------------------------------------------------------------------
 %	Certification SECTION
@@ -86,6 +87,24 @@
 \\ \href{http://bcert.me/sufosajdm}{See credential}\hfill { Scrum Alliance }
 
 \end{rSection}
+
+%----------------------------------------------------------------------------------------
+%	TECHNICAL STRENGTHS SECTION
+%----------------------------------------------------------------------------------------
+
+
+\begin{rSection}{Technical Strengths}
+
+\begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
+Machine Learning \ & Traditional ML, Deep Learning, Natural Language Processing(NLP) \\
+Language & Java, Python, C++, C, SQL, Javascript \\
+Tools \& Technologies & MySQL, Html, CSS, MongoDB, Hadoop, Linux, PL/SQL, Jenkins, Oracle, Git,\\
+& Google Colab, Jupyter Notebook, Jira(Admin), AWS, Latex \\
+Framework \ & Ruby on Rails, TensorFlow, Keras, ReactJS \\
+\end{tabular}
+
+\end{rSection}
+\newpage
 %--------------------------------------------------------------------------------
 %    Projects And Seminars
 %-----------------------------------------------------------------------------------------------
@@ -136,21 +155,7 @@ Initial results on test data gave us a macro precision of 87.16\% and a macro re
 were very promising. 
 
 \end{rSection}
-%----------------------------------------------------------------------------------------
-%	TECHNICAL STRENGTHS SECTION
-%----------------------------------------------------------------------------------------
 
-\begin{rSection}{Technical Strengths}
-
-\begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-Machine Learning \ & Traditional ML, Deep Learning, Natural Language Processing(NlP) \\
-Language & Java, Python, C++, C, SQL, Javascript \\
-Tools \& Technologies & MySQL, Html, CSS, SQL, Hadoop, Linux, PL/SQL, Jenkins, Oracle, Git,\\
-& Jira(Admin), AWS, Latex \\
-Framework \ & Ruby on Rails, TensorFlow, Keras, ReactJS \\
-\end{tabular}
-
-\end{rSection}
 
 %----------------------------------------------------------------------------------------
 %	WORK EXPERIENCE SECTION
