--- a/try-10-aug.tex
+++ b/try-10-aug.tex
@@ -30,6 +30,9 @@
 \address{62/4/A South Mugda, Dhaka, Bangladesh} % Your address
 %\address{123 Pleasant Lane \\ City, State 12345} % Your secondary addess (optional)
 \address{+880-1917187787 \\ abdulhasibsazzad@gmail.com} % Your phone number and email
+%\address{github.com/sazzadBuet08}
+%\address{https://www.hackerrank.com/SazzadBuet08}
+
 
 \begin{document}
 \begin{rSection}{Carrier Objective}
@@ -98,8 +101,8 @@
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
 Machine Learning \ & Traditional ML, Deep Learning, Natural Language Processing(NLP) \\
 Language & Java, Python, C++, C, SQL, Javascript \\
-Tools \& Technologies & MySQL, Html, CSS, MongoDB, Hadoop, Linux, PL/SQL, Jenkins, Oracle, Git,\\
-& Google Colab, Jupyter Notebook, Jira(Admin), AWS, Latex \\
+Tools \& Technologies & MySQL, Html, CSS, MongoDB, Hadoop, Linux, PL/SQL, Jenkins, AWS, \\
+&  Oracle, Git, Google Colab, Jupyter Notebook, Jira(Admin), Latex \\
 Framework \ & Ruby on Rails, TensorFlow, Keras, ReactJS \\
 \end{tabular}
 
