added social profile

--- a/try-10-aug.tex
+++ b/try-10-aug.tex
@@ -243,5 +243,13 @@ In addition to the responsibility as a software engineer descrived in the previo
 \item Ability to work as an individual as well as in group.
 \end{rSection}
 
-\end{document}
+\begin{rSection}{Social Profile}
+\item[•] \href{https://www.linkedin.com/in/md-abdul-hasib-sazzad-19b88099/}{LinkedIn}
+\item[•] \href{https://github.com/sazzadBuet08/}{Github}
+\item[•] \href{https://www.hackerrank.com/SazzadBuet08}{HackerRank}
+\item[•] \href{https://www.kaggle.com/sazzadabdulhasib}{Kaggle}
+\end{rSection}
 
+\end{document}
+%\address{github.com/sazzadBuet08}
+%\address{https://www.hackerrank.com/SazzadBuet08}
