added onors awards

--- a/try-10-aug.tex
+++ b/try-10-aug.tex
@@ -201,7 +201,7 @@ In addition to the responsibility as a software engineer descrived in the previo
 \item working on various Java applications - core project work, utilities, etc.
 \item completed CSM and worked as a ScrumMaster and Team Lead on some projects.
 \end{rSubsection}
-
+\newpage
 \begin{rSubsection}{Nascenia Limited, Dhaka}{August 2014 - August 2016}{Junior Software Engineer}{}
 \item Worked as a team player to develop a web application with on Ruby on rails.
 \item Developed some projects solely from initial requirement gathering to design, coding, testing.
@@ -214,11 +214,36 @@ In addition to the responsibility as a software engineer descrived in the previo
 \end{rSection}
 
 
-%	EXAMPLE SECTION
+%	Academic Achievements
 %----------------------------------------------------------------------------------------
 
-\begin{rSection}{Academic Achievements} 
-\item Received government scholership both in S.S.C  and H.S.C
+%\begin{rSection}{Academic Achievements} 
+%\item Received government scholership both in S.S.C  and H.S.C
+%\end{rSection}
+
+%----------------------------------------------------------------------------------------
+%	Honors and Awards SECTION
+%----------------------------------------------------------------------------------------
+
+\begin{rSection}{Honors \& Awards}
+
+{\bf Award-Winning work with the N2C2 Challenge} \hfill {\em November 2018} 
+\\ \hfill { Infolytx Inc }
+\\
+{\bf Taking leadership by the horns} \hfill {\em January 2018} 
+\\ \hfill { Infolytx Inc }
+\\
+{\bf Outstanding Contributions to the cognitive chatbot work} \hfill {\em December 2017} 
+\\ \hfill { Infolytx Inc }
+\\
+{\bf Outstanding Adoption of New Technologies and the Establishment\\ of Significant Capabilities in Data Analytics} \hfill {\em August 2016} 
+\\ \hfill { Infolytx Inc }
+\\
+{\bf Extraordinary Software Developer} \hfill {\em January 2016} 
+\\ \hfill { Infolytx Inc }
+\\
+{\bf Government Scholarship} \hfill {\em March 2009} 
+\\ \hfill { Dhaka Education Board, Bangladesh }
 \end{rSection}
 
 %\newpage
