added website url

--- a/try-10-aug.tex
+++ b/try-10-aug.tex
@@ -30,7 +30,7 @@
 \address{62/4/A South Mugda, Dhaka, Bangladesh} % Your address
 %\address{123 Pleasant Lane \\ City, State 12345} % Your secondary addess (optional)
 \address{+880-1917187787 \\ abdulhasibsazzad@gmail.com} % Your phone number and email
-%\address{github.com/sazzadBuet08}
+%\address{https://imsazzad.github.io/}
 %\address{https://www.hackerrank.com/SazzadBuet08}
 
 
@@ -269,12 +269,13 @@ In addition to the responsibility as a software engineer descrived in the previo
 \end{rSection}
 
 \begin{rSection}{Social Profile}
+\item[•] \href{https://imsazzad.github.io/}{Website}
 \item[•] \href{https://www.linkedin.com/in/md-abdul-hasib-sazzad-19b88099/}{LinkedIn}
-\item[•] \href{https://github.com/sazzadBuet08/}{Github}
+\item[•] \href{https://github.com/imsazzad/}{Github}
 \item[•] \href{https://www.hackerrank.com/SazzadBuet08}{HackerRank}
 \item[•] \href{https://www.kaggle.com/sazzadabdulhasib}{Kaggle}
 \end{rSection}
 
 \end{document}
-%\address{github.com/sazzadBuet08}
+%\address{github.com/imsazzad}
 %\address{https://www.hackerrank.com/SazzadBuet08}
