updated deeplearning.ai information.

--- a/try-10-aug.tex
+++ b/try-10-aug.tex
@@ -165,6 +165,9 @@ were very promising.
 %----------------------------------------------------------------------------------------
 
 \begin{rSection}{Work Experience}
+\begin{rSubsection}{deeplearning.ai}{Jan 2020 - Now}{Consultant}{}
+\item Reviewing the upcoming courses at deeplearning.ai 
+\end{rSubsection}
 
 \begin{rSubsection}{Infolytx Inc, Dhaka}{April 2019 - Now}{Staff Software Engineer / Machine Learning Engineer }{}
 \item Working on different Deep Learning based and NLP solution. 
@@ -264,8 +267,12 @@ In addition to the responsibility as a software engineer descrived in the previo
 
 \begin{rSection}{Personal Traits}
 \item Highly motivated and eager to learn new things.
-\item Strong motivational and leadership skills.
-\item Ability to work as an individual as well as in group.
+\item Strong leadership and motivational skills.
+%\item Ability to work as an individual as well as in group.
+\item Analytical, critical thinkers and data-driven workers.
+\item Clear communicators who can easily translate complex information.
+\item Collaborative individuals who thrive in a team environment.
+\item Creative problem solvers and innovators.
 \end{rSection}
 
 \begin{rSection}{Social Profile}
